[gd_scene load_steps=16 format=3 uid="uid://ddcfeq62x7vl5"]

[ext_resource type="Texture2D" uid="uid://dyx6v70at8syt" path="res://Textures/Icons/unknown.png" id="1_b1eb3"]
[ext_resource type="Script" path="res://Scripts/UI/windows/adv_preview.gd" id="2_cr237"]
[ext_resource type="Theme" uid="uid://m7mvoj5x6lb5" path="res://Resources/UI/main_theme.tres" id="3_mt308"]
[ext_resource type="Texture2D" uid="uid://dllcbu7i28aiw" path="res://Textures/Icons/small_heart.png" id="4_dtyc1"]
[ext_resource type="Texture2D" uid="uid://btxj61otcm2qj" path="res://Textures/Icons/star.png" id="4_g3uuj"]
[ext_resource type="Texture2D" uid="uid://d1fqd8npldynv" path="res://Textures/Icons/demi-human.png" id="5_h3oi5"]
[ext_resource type="Texture2D" uid="uid://bp5ixyfjxkpcw" path="res://Textures/Icons/sword.png" id="6_jdlyu"]
[ext_resource type="FontFile" uid="uid://y8hwagmk77ox" path="res://Fonts/Sysfont C.ttf" id="7_bermx"]
[ext_resource type="Texture2D" uid="uid://12rbu138ugdb" path="res://Textures/Icons/small_guy.png" id="7_oqrln"]
[ext_resource type="Texture2D" uid="uid://b1hxugn7rx4jw" path="res://Textures/Icons/shield.png" id="8_35rac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhn2u"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
bg_color = Color(0.960784, 0.960784, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qs1uj"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfw1k"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.729412, 0.776471, 0.854902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6gplc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xp30"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_top = 2
border_color = Color(0, 0, 0, 1)

[node name="adv_preview" type="Panel"]
offset_right = 320.0
offset_bottom = 88.0
theme = ExtResource("3_mt308")
theme_override_styles/panel = SubResource("StyleBoxFlat_hhn2u")
script = ExtResource("2_cr237")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="BaseInfoRect" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 88)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qs1uj")

[node name="portrait" type="TextureRect" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 78.0
offset_bottom = 78.0
texture = ExtResource("1_b1eb3")

[node name="name" type="Label" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 106.0
offset_top = 5.0
offset_right = 303.0
offset_bottom = 27.0
theme_override_font_sizes/font_size = 18
text = "CHARACTER  NAME"

[node name="level_race" type="Label" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 88.0
offset_top = 22.0
offset_right = 225.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 15
text = "Level X, Human"

[node name="state" type="Label" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 171.0
offset_top = 58.0
offset_right = 308.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 15
text = "State"
horizontal_alignment = 2

[node name="xp_bar" type="ProgressBar" parent="VBoxContainer/BaseInfoRect"]
layout_mode = 1
offset_left = 88.0
offset_top = 40.0
offset_right = 310.0
offset_bottom = 46.0
max_value = 1.0
value = 0.5
show_percentage = false

[node name="recruit_btn" type="Button" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_mt308")
text = "Recruit"

[node name="dismiss_btn" type="Button" parent="VBoxContainer/BaseInfoRect/recruit_btn"]
layout_mode = 0
offset_left = -66.0
offset_right = -7.0
offset_bottom = 20.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hfw1k")
text = "Deny"

[node name="star" type="TextureRect" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 288.0
offset_top = 3.0
offset_right = 312.0
offset_bottom = 27.0
texture = ExtResource("4_g3uuj")
stretch_mode = 3

[node name="race" type="TextureRect" parent="VBoxContainer/BaseInfoRect"]
texture_filter = 1
layout_mode = 0
offset_left = 87.0
offset_top = 8.0
offset_right = 103.0
offset_bottom = 24.0
texture = ExtResource("5_h3oi5")
stretch_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/BaseInfoRect"]
layout_mode = 2
offset_left = 88.0
offset_top = 60.0
offset_right = 162.0
offset_bottom = 78.0
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BaseInfoRect/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_jdlyu")
stretch_mode = 5

[node name="Label3" type="Label" parent="VBoxContainer/BaseInfoRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_bermx")
theme_override_font_sizes/font_size = 15
text = "4"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/BaseInfoRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_6gplc")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/BaseInfoRect/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("8_35rac")
stretch_mode = 5

[node name="Label4" type="Label" parent="VBoxContainer/BaseInfoRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_bermx")
theme_override_font_sizes/font_size = 15
text = "4"

[node name="AdvHealthRect" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7xp30")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/AdvHealthRect"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AdvHealthRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="health" type="Label" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Health: 15/15"

[node name="bar" type="ProgressBar" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 14)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer/bar"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 3.0
offset_top = 3.0
offset_right = 307.0
offset_bottom = 11.0
texture = ExtResource("4_dtyc1")
stretch_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="fatigue" type="Label" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Fatigue: (16%)"
vertical_alignment = 1

[node name="rest_btn" type="Button" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_mt308")
theme_override_font_sizes/font_size = 15
text = "Rest"
expand_icon = true

[node name="bar" type="ProgressBar" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 14)
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/VBoxContainer2/bar"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 307.0
offset_bottom = 11.0
texture = ExtResource("7_oqrln")
stretch_mode = 2

[node name="dismiss_btn" type="Button" parent="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_hfw1k")
text = "Dismiss"

[connection signal="pressed" from="VBoxContainer/BaseInfoRect/recruit_btn" to="." method="_on_recruit_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/BaseInfoRect/recruit_btn/dismiss_btn" to="." method="_on_dismiss_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/AdvHealthRect/MarginContainer/VBoxContainer/dismiss_btn" to="." method="_on_dismiss_btn_pressed"]
